--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,9 +5,8 @@ name: Node.js Package
 
 on:
   push:
-    tags:
-      - 'v*' # Push events to matching v*, v1.1.0, v20.15.10
-
+    branches:
+      - master
 
 jobs:
   build:
