--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tool-kit",
+    "name": "@jsercai/tool-kit",
     "version": "0.0.1",
     "description": "前端工具包",
     "main": "dist/tool-kit.cjs.js",
